e2e/manifests/test-app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: whoami.example.com
spec:
  parentRefs:
  - name: default-gateway
    namespace: envoy-gateway-system
  hostnames:
  - whoami.example.com
  rules:
  - backendRefs:
    - name: whoami
      port: 80
